force-app/main/default/objects/bpats__ATS_Timeline_Child__c/bpats__ATS_Timeline_Child__c.object-meta.xml
<CustomObject>
    <label>ATS Timeline Child</label>
    <nameField>
        <label>Timeline Child Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATS Timeline Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>