force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__ATS_Timeline_Configuration__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Timeline_Configuration__c</fullName>
    <label>ATS Timeline Configuration</label>
    <referenceTo>bpats__ATS_Timeline_Configuration__c</referenceTo>
    <relationshipLabel>ATS Timeline Childs</relationshipLabel>
    <relationshipName>ATS_Timeline_Childs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>