force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Data_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Data_Provider_Type__c</fullName>
    <label>Data Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Related Record</fullName>
            </value>
            <value>
                <fullName>Apex class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>