force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Date_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Date_Field__c</fullName>
    <label>Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>