force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Display_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Display_Object_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Object Name</label>
    <type>Checkbox</type>
</CustomField>