force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__External_Key__c.field-meta.xml
<CustomField>
    <fullName>bpats__External_Key__c</fullName>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>