force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Fields_to_Display__c.field-meta.xml
<CustomField>
    <fullName>bpats__Fields_to_Display__c</fullName>
    <label>Fields to Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>