force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Filter_Criteria_Config__c.field-meta.xml
<CustomField>
    <fullName>bpats__Filter_Criteria_Config__c</fullName>
    <label>Filter Criteria Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>