force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Icon_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>bpats__Icon_Image_Url__c</fullName>
    <label>Icon Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>