force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Include_All_Records__c.field-meta.xml
<CustomField>
    <fullName>bpats__Include_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include All Records</label>
    <type>Checkbox</type>
</CustomField>