force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__LWC_Ui_Api_Not_Supported__c.field-meta.xml
<CustomField>
    <fullName>bpats__LWC_Ui_Api_Not_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LWC Ui Api Not Supported</label>
    <type>Checkbox</type>
</CustomField>