force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Object_Color__c.field-meta.xml
<CustomField>
    <fullName>bpats__Object_Color__c</fullName>
    <label>Object Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>