force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Provider_Apex_Classname__c.field-meta.xml
<CustomField>
    <fullName>bpats__Provider_Apex_Classname__c</fullName>
    <label>Provider Apex Classname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>