force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Reference_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Reference_Field_Name__c</fullName>
    <label>Reference Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>