force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>