force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Sub_Title_Fields__c.field-meta.xml
<CustomField>
    <fullName>bpats__Sub_Title_Fields__c</fullName>
    <label>Sub Title Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>