force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Subtitle_Label__c.field-meta.xml
<CustomField>
    <fullName>bpats__Subtitle_Label__c</fullName>
    <label>Subtitle Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>