force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Title_link_Navigate_to__c.field-meta.xml
<CustomField>
    <fullName>bpats__Title_link_Navigate_to__c</fullName>
    <label>Title link Navigate to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Detail</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>