force-app/main/default/objects/bpats__ATS_Timeline_Child__c/fields/bpats__Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>bpats__Where_Clause__c</fullName>
    <label>Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>